@@ -479,3 +479,4 @@ seen. gmtime warning still there
 - Made listen format able to do:
      listen [ip]:port, for IPv6 - listen [3fff:ff::1]:6667
 - Fixed some compilation error with IPv6
+- Fixed-fixed listen format troubles, larne++
